[package]
name = "analysis-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
hyper = { version = "0.14.23", features = ["full"] }
hyper-rustls = { version = "0.23.2", features = ["webpki-roots", "http1", "http2"] }
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
tokio = { version = "1.24.1", features = ["rt", "macros", "net", "io-util"] }
tokio-rustls = { version = "0.23.4" }
tower = { version = "0.4.13", features = ["make"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"